# bgfx_starter_template

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
